<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/background_drawing_view_layout"
        android:padding="1dp"
        app:layout_constraintBottom_toTopOf="@id/ll_paint_colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ireland" />

        <com.example.drawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="#80FFFFFF" />
    </FrameLayout>


    <LinearLayout
        android:id="@+id/ll_paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_action_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container">

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/skin"
            android:contentDescription="@string/skin_color_button"
            android:onClick="paintClicked"
            android:scaleType="fitXY"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/black"
            android:contentDescription="@string/black_color_button"
            android:onClick="paintClicked"
            android:scaleType="fitXY"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"
            tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/red"
            android:contentDescription="@string/red_color_button"
            android:onClick="paintClicked"
            android:scaleType="fitXY"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/green"
            android:contentDescription="@string/green_color_button"
            android:onClick="paintClicked"
            android:scaleType="fitXY"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/blue"
            android:contentDescription="@string/blue_color_button"
            android:onClick="paintClicked"
            android:scaleType="fitXY"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue"
            tools:ignore="RedundantDescriptionCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/yellow"
            android:contentDescription="@string/yellow_color_button"
            android:onClick="paintClicked"
            android:scaleType="fitXY"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/lollipop"
            android:contentDescription="@string/lollipop_color_button"
            android:onClick="paintClicked"
            android:scaleType="fitXY"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/random"
            android:contentDescription="@string/random_color_button"
            android:onClick="paintClicked"
            android:scaleType="fitXY"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:contentDescription="@string/eraser_button"
            android:onClick="paintClicked"
            android:scaleType="fitXY"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white"
            tools:ignore="ImageContrastCheck,RedundantDescriptionCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_paint_colors">

        <ImageButton
            android:id="@+id/ib_photo"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/photo_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/folder" />

        <ImageButton
            android:id="@+id/ib_undo"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/undo_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow_undo"/>

        <ImageButton
            android:id="@+id/ib_brush"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/brush_icon"
            android:scaleType="fitCenter"
            android:src="@drawable/brush" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>